--- a/pakoworld/package.json
+++ b/pakoworld/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "xml-js": "^1.6.11",
     "yargs": "^17.3.1"
   }
