add feature to Fylliana

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled",
+  "name": "tsoukas_home",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,7 +16,9 @@
     "start-megapap-url": "node index.js --provider=megapap --filter=on --type=url",
     "start-megapap-local": "node index.js --provider=megapap --filter=on --type=file",
     "start-polib2b-url": "node index.js --provider=polib2b --filter=on --type=url",
-    "start-polib2b-local": "node index.js --provider=polib2b --filter=on --type=file"
+    "start-polib2b-local": "node index.js --provider=polib2b --filter=on --type=file",
+    "start-fylliana-url": "node index.js --provider=fylliana --filter=on --type=url",
+    "start-fylliana-local": "node --experimental-specifier-resolution=node index.js --provider=fylliana --filter=on --type=file"
   },
   "keywords": [],
   "author": "",
